made some changes - it would be good to get a link to the question

--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
 			<dt>Asker</dt>
 				<dd class="asker"></dd>
 		</dl>
+		<div class="result answer">
+			<dt>Answerer</dt>
+				<dd class="user-name"><a href="" target="_blank"></a></dd>
+			<dt>Score</dt>
+				<dd class="score"></dd>
+			<dt>Reputation</dt>
+				<dd class="user-rep"></dd>
+		</div>
 		<div class="error">
 			<p>Uh-oh! Something went wrong with your request. Here's what we know:</p>
 		</div>
